--- a/scilab/modules/fftw/Makefile.in
+++ b/scilab/modules/fftw/Makefile.in
@@ -448,6 +448,7 @@ libscifftw_la_etc_DATA = etc/fftw.quit etc/fftw.start
 @FFTW_TRUE@			-I$(top_srcdir)/modules/fileio/includes/ \
 @FFTW_TRUE@			-I$(top_srcdir)/modules/output_stream/includes \
 @FFTW_TRUE@			-I$(top_srcdir)/modules/operations/includes \
+@FFTW_TRUE@			-I$(top_srcdir)/modules/api_scilab/includes \
 @FFTW_TRUE@			$(FFTW3_CFLAGS)
 
 
