--- a/scilab/modules/helptools/Makefile.in
+++ b/scilab/modules/helptools/Makefile.in
@@ -439,7 +439,7 @@ libscihelptools_la_etc_DATA = etc/helptools.quit etc/helptools.start
 #### helptools : include files ####
 libscihelptools_la_includedir = $(pkgincludedir)/helptools
 libscihelptools_la_include_HEADERS = includes/gw_helptools.h \
-	includes/dynlib.h
+	includes/dynlib_helptools.h
 
 
 #### helptools : bin files ####
