--- a/scilab/modules/integer/src/c/integer.vcproj
+++ b/scilab/modules/integer/src/c/integer.vcproj
@@ -550,7 +550,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\sci_int.c"
+				RelativePath="..\..\sci_gateway\c\sci_int.c"
 				>
 			</File>
 			<File
