--- a/scilab/modules/renderer/src/java/renderer-JAVA.vcproj
+++ b/scilab/modules/renderer/src/java/renderer-JAVA.vcproj
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="renderer-Ant"
 	ProjectGUID="{4235A847-ED0E-43A3-B62B-E59CB857EDE9}"
 	RootNamespace="renderer-Ant"
 	Keyword="MakeFileProj"
-	
+	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -110,7 +110,7 @@
 			>
 		</Filter>
 		<File
-			RelativePath="..\..\..\build.xml"
+			RelativePath="..\..\build.xml"
 			>
 		</File>
 	</Files>
